# tools-easyanalysis

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DPHelpers.cpp  DPHelpers.hpp  Filereader.cpp  Filereader.hpp  G__auto13908LinkDef.h  LinkDef.h  Makefile  PyEasyAnalysis.py  README  README.md  Roofit_LinkDef.h  analyser.cpp  analyser.hpp  analysis.hpp  doxygen_config  fitter.cpp  fitter.hpp  multi_analyser.cpp  multi_analyser.hpp  roofit.hpp  setup.sh  test.yaml  tools.hpp
Tutorials/: Analysis_tutorial.md  Analysis_tutorial.txt  Analysis_tutorial_python.md  TreeReader_tutorial  TreeReader_tutorial.md  TreeReader_tutorial.txt  test.yaml  test_passparams.yaml
analysis/: .FeldmanCousins.cpp.swo  .FeldmanCousins.hpp.swp  CutFlow.cpp  CutFlow.hpp  DataSet.cpp  FeldmanCousins.cpp  FeldmanCousins.hpp  ModelBuilder.cpp  ModelBuilder.hpp  ModelBuilder_helpfunctions.cpp  ModelBuilder_helpfunctions.hpp  ModelBuilder_mod.cpp_  ReadTree_comp.cpp  ReadTree_comp.hpp  StringToPdf.cpp  StringToPdf.hpp  TreeReader.cpp  TreeReader.hpp  eff_functions.cpp  eff_functions.hpp  general_functions.cpp  general_functions.hpp  optimiser.cpp  optimiser.hpp  pkmumu_functions.hpp
analysis/.svn/: entries
analysis/.svn/text-base/: DataSet.hpp.svn-base  ModelBuilder.cpp.svn-base  ModelBuilder.hpp.svn-base  ReadTree_comp.cpp.svn-base  ReadTree_comp.hpp.svn-base  eff_functions.cpp.svn-base  eff_functions.hpp.svn-base  general_functions.cpp.svn-base  pkmumu_functions.cpp.svn-base
analysis/lib/.svn/: entries
doxygen/: doxygen_easyanalysis
doxygen/html/: CutFlow_8hpp_source.html  FeldmanCousins_8hpp_source.html  Filereader_8hpp_source.html  ModelBuilder_8hpp_source.html  ModelBuilder__helpfunctions_8hpp_source.html  ReadTree__comp_8hpp_source.html  RooAmorosoPdf_8h_source.html  RooApollonios_8h_source.html  RooGeneralizedHyperbolic_8h_source.html  RooIpatia2_8h_source.html  RooIpatia_8h_source.html  RooLogGamma_8h_source.html  analyser_8hpp_source.html  analysis_8hpp_source.html  annotated.html  classAnalysis-members.html  classAnalysis.html  classCutFlow-members.html  classCutFlow.html  classCutOptimiser_1_1Allows.html  classCutOptimizer-members.html  classCutOptimizer.html  classEffComp-members.html  classEffComp.html  classFeldmanCousins-members.html  classFeldmanCousins.html  classFileReader-members.html  classFileReader.html  classModelBuilder-members.html  classModelBuilder.html  classMultiAnalysis-members.html  classMultiAnalysis.html  classRooAmorosoPdf-members.html  classRooAmorosoPdf.html  classRooApollonios-members.html  classRooApollonios.html  classRooGeneralizedHyperbolic-members.html  classRooGeneralizedHyperbolic.html  classRooIpatia-members.html  classRooIpatia.html  (+34 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js
extra/: SW.cpp
lib/: .gitignore
python/: __init__.py  test.py  test.yaml
python/easyanalysis/: __init__.py  parser.py
roofit/: CMakeLists.txt  LinkDef.h  RooApollonios.cpp  RooApollonios.h  RooDoubleCB.cpp  RooDoubleCB.h  RooExpAndGauss.cpp  RooExpAndGauss.h  RooGeneralizedHyperbolic.cpp  RooGeneralizedHyperbolic.h  RooIpatia.cpp  RooIpatia.h  RooIpatia2.cpp  RooIpatia2.h  RooJohnson.cpp  RooJohnson.h  RooLinkPdfs.hpp  RooMisIDGaussian.cpp  RooMisIDGaussian.h  RooMomentumFractionPdf.cpp  RooMomentumFractionPdf.h  RooPowerLawApproxVar.cpp  RooPowerLawApproxVar.h  rooFit.hpp  roofit.hpp
roofit/.svn/: entries
roofit/.svn/text-base/: RooIpatia.cpp.svn-base
roofit/dic/: .gitkeep  RooAmorosoPdf.cpp  RooAmorosoPdf_rdict.pcm  RooApollonios.cpp  RooApollonios_rdict.pcm  RooGeneralizedHyperbolic.cpp  RooGeneralizedHyperbolic_rdict.pcm  RooIpatia.cpp  RooIpatia2.cpp  RooIpatia2_rdict.pcm  RooIpatia_rdict.pcm  RooJohnson.cpp  RooJohnson_rdict.pcm  RooLogGamma.cpp  RooLogGamma_rdict.pcm
roofit/dic/.svn/: entries
roofit/lib/.svn/: entries
roofit/trash/: RooAmorosoPdf.cpp  RooAmorosoPdf.h  RooLogGamma.cpp  RooLogGamma.h
scripts/: glimpse.csh  make.csh  make.sh  setup.csh  setup.sh  setup_env.sh
tools/: CMakeLists.txt  CutFlow.cpp  CutFlow.hpp  FeldmanCousins.cpp  FeldmanCousins.hpp  LinkDef.h  ModelBuilder.cpp  ModelBuilder.hpp  ModelBuilder_helpfunctions.cpp  ModelBuilder_helpfunctions.hpp  STCut.cpp  STCut.hpp  StringToPdf.cpp  StringToPdf.hpp  TreeReader.cpp  TreeReader.hpp  analyser.cpp  analyser.hpp  analysis.cpp  analysis.hpp  cutFlow.cpp  cutFlow.hpp  eff_functions.cpp  eff_functions.hpp  efficiencyFunctions.cpp  efficiencyFunctions.hpp  feldmanCousins.cpp  feldmanCousins.hpp  generalFunctions.cpp  generalFunctions.hpp  general_functions.cpp  general_functions.hpp  modelBuilder.cpp  modelBuilder.hpp  modelBuilderFunctions.cpp  modelBuilderFunctions.hpp  modelBuilderHelpFunctions.cpp  modelBuilderHelpFunctions.hpp  multiAnalysis.cpp  multiAnalysis.hpp  (+8 more)
