file(GLOB TOOLS_INC "*.hpp")
file(GLOB TOOLS_SRC "*.cpp")

# Include custom RooFit PDFs
include_directories(${ROOFIT_PATH})

# Generate dictionary
ROOT_GENERATE_DICTIONARY(G__${TOOLS_NAME} ${TOOLS_INC} LINKDEF ${TOOLS_LINKDEF})

# Create library
add_library(${TOOLS_NAME}-obj OBJECT ${TOOLS_SRC} G__${TOOLS_NAME}.cxx)
set_property(TARGET ${TOOLS_NAME}-obj PROPERTY POSITION_INDEPENDENT_CODE 1)

add_library(${TOOLS_NAME}-shared SHARED $<TARGET_OBJECTS:${TOOLS_NAME}-obj>)
add_library(${TOOLS_NAME}-static STATIC $<TARGET_OBJECTS:${TOOLS_NAME}-obj>)

SET_TARGET_PROPERTIES(${TOOLS_NAME}-shared PROPERTIES OUTPUT_NAME ${TOOLS_NAME} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${TOOLS_NAME}-static PROPERTIES OUTPUT_NAME ${TOOLS_NAME} CLEAN_DIRECT_OUTPUT 1)

# Link library to RooFit
target_link_libraries(${TOOLS_NAME}-static PUBLIC ${ROOFIT_NAME})
